<resources>
    <string name="app_name">Horizon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="rate_app">Rate App</string>
    <string name="network_n_stream">Network \n Stream</string>
    <string name="privacy_n_policy">Privacy \n Policy</string>
    <string name="licenses">Licenses</string>
    <string name="share">Share</string>
    <string name="video">Video</string>
    <string name="history">History</string>
    <string name="folders">Folders</string>
</resources>
