<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:id="@+id/bottom_sheet_rel_layout"
    android:background="@drawable/gradientlist"
    android:layout_height="300dp">

    <GridLayout
        android:layout_width="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="5dp"
            android:layout_margin="25dp"
            android:layout_gravity="center">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rate_btn"
        android:tint="@color/bottom_sheet_text_image_color"
        android:src="@drawable/ic_star_black_48dp"
        android:background="@null"
        />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_sheet_text_image_color"
                android:fontFamily="@font/acme"
                android:text="@string/rate_app"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="1"
            android:padding="5dp"
            android:layout_margin="25dp"
            android:layout_gravity="center">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/http_btn"
        android:tint="@color/bottom_sheet_text_image_color"
        android:src="@drawable/ic_http_black_24dp"
        android:background="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/bottom_sheet_text_image_color"
                android:fontFamily="@font/acme"
                android:text="@string/network_n_stream"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="2"
            android:padding="5dp"
            android:layout_margin="25dp"
            android:layout_gravity="center">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/policy_btn"
        android:src="@drawable/ic_policy"
        android:background="@null"
        android:tint="@color/bottom_sheet_text_image_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/bottom_sheet_text_image_color"
                android:fontFamily="@font/acme"
                android:text="@string/privacy_n_policy"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="5dp"
            android:layout_margin="25dp"
            android:layout_gravity="center">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/license_btn"
        android:tint="@color/bottom_sheet_text_image_color"
        android:src="@drawable/ic_copyright_black_24dp"
        android:background="@null"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/bottom_sheet_text_image_color"
                android:fontFamily="@font/acme"
                android:text="@string/licenses"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="5dp"
            android:layout_margin="25dp"
            android:layout_gravity="center">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/share_btn"
        android:tint="@color/bottom_sheet_text_image_color"
        android:src="@drawable/ic_share_black_48dp"
        android:background="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/bottom_sheet_text_image_color"
                android:fontFamily="@font/acme"
                android:text="@string/share"
                android:textAlignment="center"/>
        </LinearLayout>
    </GridLayout>
</RelativeLayout>